kubernetes/apps/components/arr/base/misc/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: isolate-namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": envoy-gateway-system
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": arr
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": seerr
